fixed alignment of tasks

--- a/src/Components/Tasks.css
+++ b/src/Components/Tasks.css
@@ -1,6 +1,5 @@
 .todo-title {
 display:flex;
-justify-content: space-between;
 align-items: center;
 }
 .todo-description {
